gitops/apps/frontend/overlays/local/frontend-local.yaml
---
# Source: frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: demo
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
# Source: frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  namespace: demo
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
# Source: frontend/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: demo
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "frontend.localdev.me"
---
# Source: frontend/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: demo

spec:
  replicas: 6
  revisionHistoryLimit: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: frontend
        istio: monitor

    spec:
      containers:
        - name: frontend
          image: "devopsflow999/frontend:909"
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
  strategy:
    canary:
      stableService: frontend-stable
      canaryService: frontend-canary
      scaleDownDelaySeconds: 60

      trafficRouting:
        istio:
          virtualService:
            name: frontend-vsvc
            routes:
              - primary

      steps:
        - setWeight: 10
        - setWeight: 20
        - pause:
            duration: 20s
        - setWeight: 30
        - pause:
            duration: 20s
        - setWeight: 40
        - pause:
            duration: 20s
        - setWeight: 50
        - pause:
            duration: 20s
        - setWeight: 60
        - pause:
            duration: 20s
        - setWeight: 70
        - pause:
            duration: 20s
        - setWeight: 80
        - pause:
            duration: 20s
        - setWeight: 90
        - pause:
            duration: 20s
---
# Source: frontend/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-vsvc
  namespace: demo
spec:
  hosts:
    - "frontend.localdev.me"
  gateways:
    - "frontend-gateway"
  http:
    - name: canary-debug
      match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: frontend-canary
          weight: 100
    - name: primary
      route:
        - destination:
            host: frontend-stable
          weight: 100
        - destination:
            host: frontend-canary
          weight: 0
